AC_INIT([media-utils], [1.0], [bchen@sensity.com])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AM_PROG_AR
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_SYS_LARGEFILE

AC_ARG_ENABLE(debug,
	AS_HELP_STRING([--enable-debug], [Compile with DEBUG flag]))
AS_IF([test "$enable_debug" = "yes"], [DEBUG="-DDEBUG"])
AC_SUBST(DEBUG)	

PKG_PROG_PKG_CONFIG
PKG_INSTALLDIR

PKG_CHECK_MODULES([LIBAVCODEC], [libavcodec])
AC_SUBST(LIBAVCODEC_CFLAGS)
AC_SUBST(LIBAVCODEC_LIBS)

PKG_CHECK_MODULES([LIBAVFORMAT], [libavformat])
AC_SUBST(LIBAVFORMAT_CFLAGS)
AC_SUBST(LIBAVFORMAT_LIBS)

PKG_CHECK_MODULES([LIBAVDEVICE], [libavdevice])
AC_SUBST(LIBAVDEVICE_CFLAGS)
AC_SUBST(LIBAVDEVICE_LIBS)

PKG_CHECK_MODULES([LIBSWSCALE], [libswscale])
AC_SUBST(LIBSWSCALE_CFLAGS)
AC_SUBST(LIBSWSCALE_LIBS)

PKG_CHECK_MODULES([LIBAVUTIL], [libavutil])
AC_SUBST(LIBAVUTIL_CFLAGS)
AC_SUBST(LIBAVUTIL_LIBS)

PKG_CHECK_MODULES([OPENCV], [opencv])
AC_SUBST(OPENCV_CFLAGS)
AC_SUBST(OPENCV_LIBS)

PKG_CHECK_MODULES([JSON], [json-c])
AC_SUBST(JSON_CFLAGS)
AC_SUBST(JSON_LIBS)

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile config/mnutils.pc])
AC_OUTPUT



