bin_PROGRAMS		= mngrab mndraw

mngrab_SOURCES		= mngrab.c mnannotate.c
mngrab_CFLAGS		= $(DEBUG) $(LIBAVCODEC_CFLAGS) $(LIBAVFORMAT_CFLAGS) $(LIBAVDEVICE_CFLAGS) \
			  $(LIBSWSCALE_CFLAGS) $(LIBAVUTIL_CFLAGS) $(OPENCV_CFLAGS)
mngrab_LDADD		= $(LIBAVCODEC_LIBS) $(LIBAVFORMAT_LIBS) $(LIBAVDEVICE_LIBS) \
			  $(LIBSWSCALE_LIBS) $(LIBAVUTIL_LIBS) $(OPENCV_LIBS) \
			  $(OPENCV_LIBS) $(JSON_LIBS)

mndraw_SOURCES		= mndraw.c mnannotate.c
mndraw_CFLAGS		= $(DEBUG) $(OPENCV_CFLAGS) $(JSON_CFLAGS)
mndraw_LDADD		= $(OPENCV_LIBS) $(JSON_LIBS)
